--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@commitlint/cli": "^19.6.0",
     "@commitlint/config-conventional": "^19.6.0",
     "@commitlint/types": "^19.5.0",
+    "@esbuild/darwin-arm64": "^0.25.2",
     "@eslint/js": "^9.16.0",
     "@faker-js/faker": "^9.3.0",
     "@iconify-icons/ep": "^1.2.12",
