--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@vueuse/core": "^12.0.0",
     "@vueuse/motion": "^2.2.6",
     "animate.css": "^4.1.1",
-    "axios": "^1.7.9",
+    "axios": "^1.8.4",
     "dayjs": "^1.11.13",
     "echarts": "^5.5.1",
     "element-plus": "^2.9.0",
@@ -83,6 +83,7 @@
     "@iconify-icons/ep": "^1.2.12",
     "@iconify-icons/ri": "^1.2.10",
     "@iconify/vue": "^4.2.0",
+    "@types/axios": "^0.14.4",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.17.9",
     "@types/nprogress": "^0.2.3",
@@ -97,7 +98,7 @@
     "boxen": "^8.0.1",
     "code-inspector-plugin": "^0.18.2",
     "cssnano": "^7.0.6",
-    "eslint": "^9.16.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-define-config": "^2.1.0",
     "eslint-plugin-prettier": "^5.2.1",
